[package]
name = "nbsh"
version = "0.1.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"
description = "experimental interactive shell"
license = "MIT"
repository = "https://git.tozt.net/nbsh"
readme = "README.md"
keywords = ["shell", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.13"
futures = "0.1.29"
mio = "0.6.19"
nix = "0.15"
snafu = { version = "0.5", features = ["futures-01"] }
tokio = "0.1.22"
tokio-pty-process-stream = "0.2"
